Apache and PHP-FPM containers now linking

--- a/apache/conf/000-default.conf
+++ b/apache/conf/000-default.conf
@@ -10,7 +10,7 @@
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/public
-	ProxyPassMatch ^/(.*\.php)$ fcgi://127.0.0.1:9000/var/www/html/public/$1
+	ProxyPassMatch ^/(.*\.php)$ fcgi://php-fpm-55:9000/var/www/html/public/$1
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
