Configured the PHP container to run xDebug for remote debugging

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -6,9 +6,12 @@ RUN apt-get update && apt-get install -y php5-fpm php5-cli php5-apcu php5-intl p
 
 COPY conf/www.conf /etc/php5/fpm/pool.d/www.conf
 
+COPY conf/xdebug.ini /etc/php5/fpm/conf.d/20-xdebug.ini
+RUN touch /tmp/xdebug.log
+
 ADD conf/run.sh /run.sh
 RUN chmod +x /run.sh
 
-EXPOSE 9000
+EXPOSE 9000 9001
 
 CMD ["/run.sh"]
